# BulkMailer

./: .env.example  .gitignore  CHANGELOG.md  EVAL.md  README.md  SETUP.md  TODO.md  pyproject.toml
.cursor/: ide_state.json
.supermaven/: config.json
app/: config.py  dependencies.py  main.py
app/api/: routes.py
app/models/: domain.py
app/services/: csv_loader.py  docx_loader.py  gmail.py  pending_credentials.py  pending_state_store.py  store.py  template_renderer.py  token_store.py
app/static/: recipient-template.csv
app/templates/: base.html  landing.html  preview.html  recipients.html
data/: pending_credentials.json  sample.csv
tests/: conftest.py  test_csv_loader.py  test_oauth_fallback.py  test_oauth_manual.py  test_routes.py  test_template_renderer.py
